# ZMQ-Uni-Project

./: .gitignore  CMakeLists.txt  README.md  make_build.sh  make_clean.sh  make_test.sh  make_test_worker.sh  own_test_simple.txt
src/distributor/: main.c
src/lib/: encoder.c  encoder.h  hashmap.c  hashmap.h  linked_list.c  linked_list.h
src/lib/tests/: hashmap_test.c  linked_list_test.c
src/worker/: main.c
